Make Validation Dialog resizable + in Scrollpane